[package]
name = "massflow"
version = "0.1.1"
authors = ["Sascha Smolkov <sascha.smolkov@gmail.com>"]
description = "LAR process water analyzers"
edition = "2018"
keywords = ["flow", "airflow","humidity","pressure"]
categories = ["linux", "sensor"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lar-rs/airflow"
 

[build-dependencies]
autocfg = "0.1"
cc = "1.0"
cfg-if = "0.1.10"

[dependencies]
### cli|args
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
clap_flags= "0.4.0"
atty = "0.2"
ctrlc ="*"

# cli|communication|check
# atty = "0.2.13"

# cli|fine|terminal
ansi_term = "0.12.1"
yansi = "0.5.0"

## error|managment
failure = "0.1.6"
exitfailure = "0.5.1"
human-panic = "1.0.1"

## log
log = "0.4.8"
femme = "1.3.0"

# configuration|serialize
toml = "0.5.5"
confy = "0.3.1"
# time|date
chrono = "0.4.10"

## value|bit
# bitvec = "0.15.2"
# nom = "5.0.1"
# regex= "1.3.1"
## Serealizers
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.2.0"
serde_json = "1.0.42"
### driver|hardware
# socketcan = "1.7.0"
# dbus="0.7.1"

### channels|async|net|static
crossbeam = "0.7.3"
lazy_static = "1.4.0"
# async-std  = { version = "1.2.0", features = ["unstable"] }
# async-log  = "2.0.0"
# futures-preview = {version = "0.3.0-alpha.19", features = ["async-await"], optional = true }
# async-trait = "0.1.19"
mio = { git = "https://github.com/lar-rs/mio.git" }
can = { git = "https://github.com/lar-rs/can.git" }

### protocol|jsonrpc
# jsonrpc-core = "14.0.3"
# jsonrpc-derive = "14.0.3"
# jsonrpc-ipc-server = "14.0.3"
# jsonrpc-core-client = "14.0.3"
# jsonrpc-tcp-server = "14.0.3"
# tarpc = "0.19.0"
notify = "4.0.14"
#hardware
mcp3425 = "0.3.0"
ads1x1x = "0.2.0"

embedded-hal="0.2.3"
linux-embedded-hal="0.3.0"
nb = "0.1.2"
# nom = "5.0.1"
# bytes = "0.4.12"
# serial = "0.4.0"
# futures-preview = { version = "0.3.0-alpha.19", optional = true, features = [ "async-await"] }

# embedded-hal = { version = "0.2.3", features = ["unproven"] }
# nb = "0.1.2"